Added label to force a merge conflict.

--- a/src/application/GradeCalculatorView.fxml
+++ b/src/application/GradeCalculatorView.fxml
@@ -27,6 +27,7 @@
                   <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                 </HBox.margin>
             </Label>
+            <Label text="This should cause a merge conflict"/>
          </children>
       </HBox>
       <HBox prefHeight="50.0" prefWidth="200.0">
