--- a/src/application/GradeCalculatorView.fxml
+++ b/src/application/GradeCalculatorView.fxml
@@ -12,7 +12,7 @@
    <children>
       <HBox prefHeight="40.0">
          <children>
-            <Label text="Project Grade ">
+            <Label prefHeight="27.0" prefWidth="163.0" text="Project Grade ">
                <HBox.margin>
                   <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                </HBox.margin></Label>
@@ -27,7 +27,7 @@
                   <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
                 </HBox.margin>
             </Label>
-			<Label text="This should cause a merge conflict"/>
+			<Label text="This should cause a merge conflict" />
             <Label fx:id="projectErrorLabel" text="Error message goes here" textFill="RED">
             	<HBox.margin>
             		<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
