--- a/src/application/GradeCalculatorView.fxml
+++ b/src/application/GradeCalculatorView.fxml
@@ -86,7 +86,8 @@
             		<Integer fx:value="2" />
             		<Integer fx:value="3" />
             		<Integer fx:value="4" />
-            		<Integer fx:value="5" />            		
+            		<Integer fx:value="5" /> 
+         		
             		</FXCollections>
             	</items>
             </ChoiceBox>
@@ -98,12 +99,28 @@
       
       <HBox prefHeight="50.0" prefWidth="200.0">
          <children>
-            <Label text="Avg. Quiz Grade">
+            <Label text="Number of Quizzes Completed">
             	<HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                 </HBox.margin>
             </Label>
-            <Slider fx:id="quizSlider" majorTickUnit="1.0" max="10.0" minorTickCount="1" showTickLabels="true" showTickMarks="true" />
+            <ChoiceBox fx:id="quizzesChoiceBox" prefWidth="150.0">
+            	<items>
+            		<FXCollections fx:factory="observableArrayList">
+            		<Integer fx:value="1" />
+            		<Integer fx:value="2" />
+            		<Integer fx:value="3" />
+            		<Integer fx:value="4" />
+            		<Integer fx:value="5" />
+            		<Integer fx:value="6" />
+            		<Integer fx:value="7" />
+            		<Integer fx:value="8" />
+            		<Integer fx:value="9" />
+            		<Integer fx:value="10" />              		
+            		</FXCollections>
+            	</items>
+            </ChoiceBox>
+            <Button mnemonicParsing="false" onAction="#getQuizGrades" text="Enter Quiz Grade"/>
          </children>
          <VBox.margin>
             <Insets left="10.0" top="50.0" />
