--- a/src/application/GradeCalculatorView.fxml
+++ b/src/application/GradeCalculatorView.fxml
@@ -87,6 +87,13 @@
             		<Integer fx:value="3" />
             		<Integer fx:value="4" />
             		<Integer fx:value="5" /> 
+            		<Integer fx:value="10" />
+            		<Integer fx:value="11" /> 
+            		<Integer fx:value="12" />
+            		<Integer fx:value="13" />
+            		<Integer fx:value="14" />
+            		<Integer fx:value="15" />  
+
          		
             		</FXCollections>
             	</items>
