--- a/src/application/GradeCalculatorView.fxml
+++ b/src/application/GradeCalculatorView.fxml
@@ -8,201 +8,245 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.collections.FXCollections?>
 
-<VBox prefHeight="722.0" prefWidth="881.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GradeCalculatorController">
+<VBox prefHeight="673.0" prefWidth="1083.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.GradeCalculatorController">
    <children>
-      <HBox prefHeight="40.0">
+      <HBox prefHeight="75.0" prefWidth="200.0">
          <children>
-            <Label prefHeight="27.0" prefWidth="163.0" text="Project Grade ">
+            <Label text="Project Grade">
                <HBox.margin>
-                  <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
+                  <Insets bottom="10.0" left="30.0" right="10.0" top="10.0" />
                </HBox.margin></Label>
-            
-            <TextField fx:id="projectGradeTextfield">
-            	<HBox.margin>
-                  <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-                </HBox.margin>
+            <TextField fx:id="projectGradeTextField">
+	           <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
             </TextField>
             <Label text="\%">
-            	<HBox.margin>
-                  <Insets bottom="15.0" left="15.0" right="15.0" top="15.0" />
-                </HBox.margin>
-            </Label>
-            <Label fx:id="projectErrorLabel" text="" textFill="RED">
-            	<HBox.margin>
-            		<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-            	</HBox.margin>
-            </Label>            
-		</children>
-      </HBox>
-      <HBox prefHeight="50.0" prefWidth="200.0">
-		<children>
-            <Label text="Required Coding Challenges Passed">
-            	<HBox.margin>
+	           <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                </HBox.margin>
-            </Label>
-            <ChoiceBox fx:id="codingcChoiceBox" prefWidth="150.0">
-            	<items>
-
-            		<FXCollections fx:factory="observableArrayList">
-            		<Integer fx:value="0" />
-            		<Integer fx:value="1" />
-            		<Integer fx:value="2" />
-            		<Integer fx:value="3" />
-            		<Integer fx:value="4" />
-            		<Integer fx:value="5" />  
-            		<Integer fx:value="6" />
-            		<Integer fx:value="7" />
-            		<Integer fx:value="8" />
-            		<Integer fx:value="9" />
-            		<Integer fx:value="10" />
-            		<Integer fx:value="11" /> 
-            		<Integer fx:value="12" />
-            		<Integer fx:value="13" />
-            		<Integer fx:value="14" />
-            		<Integer fx:value="15" />  
-
-            		</FXCollections>
-            	</items>
-            </ChoiceBox>
-         </children>
-         <VBox.margin>
-            <Insets top="50.0" />
-         </VBox.margin>
-      </HBox>
-      
-      <HBox prefHeight="50.0" prefWidth="200.0">
-         <children>
-            <Label text="Optional Coding Challenges Passed">
-            	<HBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                </HBox.margin>
-            </Label>
-            <ChoiceBox fx:id="optionalChoiceBox" prefWidth="150.0">
-            	<items>
-            		<FXCollections fx:factory="observableArrayList">
-            		<Integer fx:value="0" />
-            		<Integer fx:value="1" />
-            		<Integer fx:value="2" />
-            		<Integer fx:value="3" />
-            		<Integer fx:value="4" />
-            		<Integer fx:value="5" /> 
-         		
-            		</FXCollections>
-            	</items>
-            </ChoiceBox>
-         </children>
-         <VBox.margin>
-            <Insets top="50.0" />
-         </VBox.margin>
-      </HBox>
-      
-      <HBox prefHeight="60.0" prefWidth="200.0">
-         <children>
-            <Label text="Number of Required Quizzes Completed">
-            	<HBox.margin>
-                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-                </HBox.margin>
-            </Label>
-            <ChoiceBox fx:id="quizzesChoiceBox" prefWidth="150.0">
-            	<items>
-            		<FXCollections fx:factory="observableArrayList">
-            		<Integer fx:value="1" />
-            		<Integer fx:value="2" />
-            		<Integer fx:value="3" />
-            		<Integer fx:value="4" />
-            		<Integer fx:value="5" />
-            		<Integer fx:value="6" />
-            		<Integer fx:value="7" />
-            		<Integer fx:value="8" />
-            		<Integer fx:value="9" />
-            		<Integer fx:value="10" />    
-            		<Integer fx:value="10" />
-            		<Integer fx:value="11" /> 
-            		<Integer fx:value="12" />
-            		<Integer fx:value="13" />
-            		<Integer fx:value="14" />
-            		<Integer fx:value="15" />          		
-            		</FXCollections>
-            	</items>
-            </ChoiceBox>
-            <Button mnemonicParsing="false" onAction="#getQuizGrades" text="Enter Quiz Grade" />
-         </children>
-         <VBox.margin>
-            <Insets left="10.0" top="50.0" />
-         </VBox.margin>
-      </HBox>
-      <HBox prefHeight="47.0" prefWidth="900.0">
-         <children>
-            <Label text="Average Reuired Quiz Grade">
-               <padding>
-                  <Insets left="20.0" top="30.0" />
-               </padding>
-            </Label>
-            <Label text="  " />
-            <TextField fx:id="avgRequiredQuizGrade">
-               <HBox.margin>
-                  <Insets top="20.0" />
                </HBox.margin>
-            </TextField>
-         </children>
-      </HBox>
-      
-      
-            
-            
-            
-            <HBox prefHeight="50.0" prefWidth="200.0">
-         <children>
-            <Label text="Number of Optional Quizzes Completed">
-            	<HBox.margin>
+            </Label>
+
+            <Label fx:id="projectGradeErrorLabel" text="" textFill="RED">
+               <HBox.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
+            
+            </Label>
+
+            <Label fx:id="projectGradeErrorLabel" text="" textFill="RED">
+                <HBox.margin>
+                    <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                 </HBox.margin>
             </Label>
-            <ChoiceBox fx:id="optinalQuizzesChoiceBox" prefWidth="150.0">
-            	<items>
-            		<FXCollections fx:factory="observableArrayList">
-            		<Integer fx:value="1" />
-            		<Integer fx:value="2" />
-            		<Integer fx:value="3" />
-            		<Integer fx:value="4" />
-            		<Integer fx:value="5" />            		
-            		</FXCollections>
-            	</items>
+
+            
+
+         </children>
+      </HBox>
+      <HBox prefHeight="75.0" prefWidth="200.0">
+         <children>
+            <Label text="Required Coding Challenges Passed:">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="30.0" right="10.0" top="10.0" />
+               </HBox.margin></Label>
+            <ChoiceBox fx:id="reqeiredCodingChallengesChoiceBox" prefWidth="150.0">
+	            <items>
+		            <FXCollections fx:factory="observableArrayList">
+			            <Integer fx:value="0" />
+			            <Integer fx:value="1" />
+			            <Integer fx:value="2" />
+			            <Integer fx:value="3" />
+			            <Integer fx:value="4" />
+			            <Integer fx:value="5" />
+			            <Integer fx:value="6" />
+			            <Integer fx:value="7" />
+			            <Integer fx:value="8" />
+			            <Integer fx:value="9" />
+			            <Integer fx:value="10" />
+			            <Integer fx:value="11" />
+			            <Integer fx:value="12" />
+			            <Integer fx:value="13" />
+			            <Integer fx:value="14" />
+			            <Integer fx:value="15" />
+		            </FXCollections>
+	            </items>
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
             </ChoiceBox>
-            <Button mnemonicParsing="false" onAction="#getOptionalQuizGrades" text="Enter Quiz Grade" />
+         </children>
+      </HBox>
+      <HBox prefHeight="75.0" prefWidth="200.0">
+         <children>
+            <Label text="Optional Coding Challenges Passed:   ">
+               <HBox.margin>
+                  <Insets left="30.0" />
+               </HBox.margin></Label>
+            <ChoiceBox fx:id="optionalCodingChallengesChoiceBox" prefWidth="150.0">
+                <items>
+                    <FXCollections fx:factory="observableArrayList">
+                        <Integer fx:value="0" />
+                        <Integer fx:value="1" />
+                        <Integer fx:value="2" />
+                        <Integer fx:value="3" />
+                        <Integer fx:value="4" />
+                        <Integer fx:value="5" />
+                        
+                    
+                    </FXCollections>
+                
+                </items>
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" />
+               </HBox.margin>
+            </ChoiceBox>
+            
+            
+                            
          </children>
          <VBox.margin>
-            <Insets left="10.0" top="50.0" />
+            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          </VBox.margin>
       </HBox>
-      <HBox prefHeight="63.0" prefWidth="881.0">
+      <HBox prefHeight="75.0" prefWidth="200.0">
          <children>
-            <Label text="Average Optional Quiz Grade">
-               <padding>
-                  <Insets left="20.0" top="20.0" />
-               </padding>
-            </Label>
-            <Label text="   " />
-            <TextField fx:id="avgOptionalQuizGrade">
+            <Label text="Number of required quizzes completed">
                <HBox.margin>
-                  <Insets top="20.0" />
+                <Insets bottom="10.0" left="30.0" right="10.0" top="14.0" />
                </HBox.margin>
-            </TextField>
-         </children></HBox>
+               
+             </Label>
+             <ChoiceBox fx:id="reqQuizzesChoiceBox" prefWidth="150.0">
+                <items>
+                    <FXCollections fx:factory="observableArrayList">
+                   
+                        <Integer fx:value="1" />
+                        <Integer fx:value="2" />
+                        <Integer fx:value="3" />
+                        <Integer fx:value="4" />
+                        <Integer fx:value="5" />
+                        <Integer fx:value="6" />
+                        <Integer fx:value="7" />
+                        <Integer fx:value="8" />
+                        <Integer fx:value="9" />
+                        <Integer fx:value="10" />
+                        <Integer fx:value="11" />
+                        <Integer fx:value="12" />
+                        <Integer fx:value="13" />
+                        <Integer fx:value="14" />
+                        <Integer fx:value="15" />
+                        
+                    </FXCollections>
+                
+                </items>
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin>
+            </ChoiceBox>
+            
+          
+            
+            
+            <Button mnemonicParsing="false" onAction="#getRequiredQuizGrades" text="Enter Required Quiz Grades">
+               <HBox.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </HBox.margin></Button>
+            
+         </children>
+         
+      </HBox>
       
-      
-      
-      
-      
-      
-      <Button mnemonicParsing="false" onAction="#calculateGrade" text="Calculate Grade">
-         <VBox.margin>
-            <Insets left="130.0" top="30.0" />
-         </VBox.margin></Button>
-      <Label fx:id="courseGradeLabel">
-         <VBox.margin>
-            <Insets bottom="10.0" left="110.0" top="10.0" />
-         </VBox.margin></Label>   
+      <HBox>
+         <children>
+         
+         <Label text="Number of Optional quizzes completed">
+                  <HBox.margin>
+                   <Insets bottom="10.0" left="30.0" right="10.0" top="18.0" />
+                  </HBox.margin>
+            </Label>
+         
+           <ChoiceBox fx:id="optQuizzesChoiceBox" prefWidth="150.0">
+                   <items>
+                       <FXCollections fx:factory="observableArrayList">
+                      
+                           <Integer fx:value="1" />
+                           <Integer fx:value="2" />
+                           <Integer fx:value="3" />
+                           <Integer fx:value="4" />
+                           <Integer fx:value="5" />
+                          
+                           
+                       </FXCollections>
+                   
+                   </items>
+                  <HBox.margin>
+                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  </HBox.margin>
+               </ChoiceBox>
+               
+           <Button mnemonicParsing="false" onAction="#getOptionalQuizGrades" text="Enter Optional Quiz Grades">
+                  <HBox.margin>
+                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  </HBox.margin>
+            </Button>
+         </children>
+        </HBox>
+      <VBox prefHeight="200.0" prefWidth="100.0">
+         <children>
+         
+         <HBox>
+            <children>
+               <Label text="Average Grade for Required Quizzes: ">
+                  <VBox.margin>
+                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  </VBox.margin>
+               </Label>
+               <Label fx:id="reqAverageQuizGrade" text="0.0">
+                  <VBox.margin>
+                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  </VBox.margin>
+                     <HBox.margin>
+                        <Insets left="10.0" top="1.0" />
+                     </HBox.margin>
+               </Label>
+              </children>
+               <VBox.margin>
+                  <Insets bottom="10.0" left="30.0" top="25.0" />
+               </VBox.margin> 
+          </HBox> 
+          
+           <HBox>
+             <children>
+               <Label text="Average Grade for Optional Quizzes: ">
+                  <VBox.margin>
+                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  </VBox.margin>
+                     <HBox.margin>
+                        <Insets left="30.0" top="30.0" />
+                     </HBox.margin>
+               </Label>
+                <Label fx:id="optAverageQuizGrade" text="0.0">
+                  <VBox.margin>
+                     <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                  </VBox.margin>
+                     <HBox.margin>
+                        <Insets left="10.0" top="30.0" />
+                     </HBox.margin>
+               </Label>
+            </children>
+           </HBox>
+                   
+            
+            <Button mnemonicParsing="false" onAction="#calculateGrade" text="Calculate Grade">
+               <VBox.margin>
+                  <Insets bottom="20" left="150.0" right="150.0" top="35.0" />
+               </VBox.margin>
+            </Button>
+         </children> 
+       
+        
+      </VBox>
+      <Label fx:id="courseGradeLabel" text=" " />
    </children>
 </VBox>
